--- a/package.json
+++ b/package.json
@@ -1,10 +1,25 @@
 {
   "dependencies": {
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/stack": "^6.0.7",
     "expo": "^45.0.0",
+    "firebase": "8.2.3",
+    "lottie-react-native": "5.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-bouncy-checkbox": "^2.1.4",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-safe-area-view": "^1.1.1",
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-web": "0.17.7",
+    "react-redux": "^7.2.5",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
