--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-native": "0.68.2",
     "react-native-bouncy-checkbox": "^2.1.4",
     "react-native-gesture-handler": "~2.2.1",
+    "react-native-gifted-charts": "^1.2.41",
     "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-safe-area-view": "^1.1.1",
