--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
     "expo": "^45.0.0",
+    "expo-camera": "~12.2.0",
     "expo-linear-gradient": "~11.3.0",
     "firebase": "8.2.3",
     "lottie-react-native": "5.0.1",
@@ -36,5 +37,11 @@
   },
   "version": "1.0.0",
   "private": true,
-  "name": "crypto-dashboard-mobile"
+  "name": "crypto-dashboard-mobile",
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 4,
+    "semi": false,
+    "singleQuote": true
+  }
 }
