--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
+    "axios": "^0.27.2",
     "expo": "^45.0.0",
     "expo-camera": "~12.2.0",
     "expo-linear-gradient": "~11.3.0",
