complete data flow of updating NFT with new wallet

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "expo-camera": "~12.2.0",
     "expo-linear-gradient": "~11.3.0",
     "firebase": "8.2.3",
+    "lodash.clonedeep": "^4.5.0",
     "lottie-react-native": "5.0.1",
     "native-base": "^3.4.7",
     "react": "17.0.2",
@@ -15,6 +16,7 @@
     "react-native-bouncy-checkbox": "^2.1.4",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-gifted-charts": "^1.2.41",
+    "react-native-globalize": "^4.5.1",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-reanimated": "~2.8.0",
