--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "eslint": "^8.20.0",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-native": "^4.0.0"
   },
   "scripts": {
     "start": "expo start",
