--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
+    "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "expo": "^45.0.0",
     "expo-camera": "~12.2.0",
@@ -25,7 +26,7 @@
     "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "0.17.7",
-    "react-redux": "^7.2.5",
+    "react-redux": "^7.2.8",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "tslib": "^2.3.1"
   },
