migrate to RTK and RTK-query for state management

--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
     "tabWidth": 4,
     "semi": false,
     "singleQuote": true
+  },
+  "resolutions": {
+    "react-devtools-core": "4.14.0"
   }
 }
