--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
+  "name": "crypto-dashboard",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
+  "private": true,
   "dependencies": {
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "expo": "^45.0.0",
+    "expo-barcode-scanner": "~11.3.0",
     "expo-camera": "~12.2.0",
+    "expo-dev-client": "~1.0.1",
     "expo-linear-gradient": "~11.3.0",
     "firebase": "8.2.3",
     "lodash.clonedeep": "^4.5.0",
@@ -42,9 +48,6 @@
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
-  "version": "1.0.0",
-  "private": true,
-  "name": "crypto-dashboard-mobile",
   "prettier": {
     "trailingComma": "es5",
     "tabWidth": 4,
