--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "expo": "^45.0.0",
     "expo-barcode-scanner": "~11.3.0",
     "expo-camera": "~12.2.0",
+    "expo-constants": "~13.1.1",
     "expo-dev-client": "~1.0.1",
     "expo-linear-gradient": "~11.3.0",
     "firebase": "8.2.3",
