--- a/app.json
+++ b/app.json
@@ -6,6 +6,7 @@
       "orientation": "portrait",
       "icon": "./assets/images/icon.png",
       "userInterfaceStyle": "light",
+      "jsEngine": "hermes",
       "splash": {
         "image": "./assets/images/splash.png",
         "resizeMode": "contain",
