--- a/package.json
+++ b/package.json
@@ -39,9 +39,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-universe": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
-    "eslint-plugin-react-native": "^4.0.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-native": "^4.0.0",
+    "prettier": "2.7.1"
   },
   "scripts": {
     "start": "expo start",
@@ -49,11 +55,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
-  "prettier": {
-    "trailingComma": "es5",
-    "tabWidth": 4,
-    "semi": false,
-    "singleQuote": true
+  "eslintConfig": {
+    "extends": "universe/native"
   },
   "resolutions": {
     "react-devtools-core": "4.14.0"
