--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "crypto-dashboard",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "dependencies": {
     "@react-navigation/material-top-tabs": "^6.2.2",
@@ -15,6 +14,8 @@
     "expo-constants": "~13.1.1",
     "expo-dev-client": "~1.0.1",
     "expo-linear-gradient": "~11.3.0",
+    "expo-splash-screen": "~0.15.1",
+    "expo-status-bar": "~1.3.0",
     "firebase": "8.2.3",
     "lodash.clonedeep": "^4.5.0",
     "lottie-react-native": "5.0.1",
@@ -23,6 +24,7 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-bouncy-checkbox": "^2.1.4",
+    "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-gifted-charts": "^1.2.41",
     "react-native-globalize": "^4.5.1",
@@ -32,6 +34,7 @@
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-safe-area-view": "^1.1.1",
+    "react-native-screens": "~3.11.1",
     "react-native-svg": "^12.3.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^8.1.0",
@@ -53,9 +56,9 @@
     "prettier": "2.7.1"
   },
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "eslintConfig": {
